fix: line wrapping for source editor

--- a/src/renderer/src/assets/styles/markdown.scss
+++ b/src/renderer/src/assets/styles/markdown.scss
@@ -322,5 +322,10 @@ mjx-container {
       line-height: 1.6;
       padding-left: 0.25em;
     }
+
+    .cm-lineWrapping * {
+      word-wrap: break-word;
+      white-space: pre-wrap;
+    }
   }
 }
